<resources>
    <string name="app_name">Водовоз</string>
    <string name="login_page">Авторизация</string>
    <string name="login">Войти</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="cancel">Отмена</string>
    <string name="confirm">Ок</string>
    <string name="authorization_failed">Ошибка авторизации</string>
    <string name="orders_activity_title">Список заказов</string>
    <string name="bottles_return">Количество бутылей на возврат от клиента</string>

    <string name="route_lists_activity_title">Список маршрутных листов</string>
    <string name="get_route">Построить маршрут</string>
    <string name="order_comment_title">Комментарий к заказу</string>
    <string name="delivery_point_comment_title">Комментарий к точке доставки</string>
    <string name="delivery_point">Точка доставки</string>
    <string name="delivery_time">Время доставки:</string>
    <string name="other_contacts">Телефоны компании</string>
    <string name="order_items">Товары</string>
    <string name="order_bottles_returned">Возвращено бутылей:</string>
    <string name="order_equipment">Оборудование</string>

    <string name="menu_item_shutdown">Завершение работы</string>
    <string name="menu_item_close">Выход</string>
    <string name="menu_item_logout">Смена пользователя</string>
    <string name="menu_item_start_route_list">Принять</string>
    <string name="menu_show_all_orders">Показывать все заказы</string>
    <string name="menu_use_gps_time">Время GPS</string>

    <string name="wait_for_status_change">Изменение статуса. Пожалуйста, подождите.</string>

    <string name="auth_file_key">ru.qsolution.vodovoz.driver.auth</string>

    <string-array name="order_status_array">
        <item name="Completed">Выполнен</item>
        <item name="EnRoute">В пути</item>
    </string-array>

    <string-array name="left_menu_items_array">
        <item>@string/route_lists</item>
        <item>@string/chat</item>
    </string-array>
    <string name="route_lists">Маршрутные листы</string>
    <string name="chat">Чат</string>

    <string name="btn_send">Отправить</string>
    <string name="unable_to_get_messages">Не удалось загрузить сообщения</string>
    <string name="new_chat_message">Новое сообщение</string>

    <string name="drawer_open">Открыть меню</string>
    <string name="drawer_close">Закрыть меню</string>

    <!--Placeholders -->
    <string name="placeholder_id">%ID%</string>
    <string name="placeholder_status">%STATUS%</string>
    <string name="placeholder_order_number">%ORDER NUMBER%</string>
    <string name="placeholder_client_name">%CLIENT NAME%</string>
    <string name="placeholder_contact_person">%CONTACT PERSON%</string>
    <string name="placeholder_delivery_date">%DELIVERY DATE%</string>
    <string name="placeholder_client_address">%CLIENT ADDRESS%</string>
    <string name="placeholder_delivery_shift">%DELIVERY SHIFT%</string>
    <string name="placeholder_contact_phone">%CONTACT_PHONE%</string>
    <string name="placeholder_order_status">%ORDER STATUS%</string>
    <string name="placeholder_forwarder_name">%FORWARDER NAME%</string>
    <string name="placeholder_delivery_time">%DELIVERY TIME%</string>
    <string name="placeholder_order_comments">%ORDER COMMENTS%</string>
    <string name="placeholder_delivery_point_comments">%DELIVERY POINT COMMENTS%</string>
    <string name="placeholder_bottles_number">%BOTTLES%</string>

    <!--Content Descriptions-->
    <string name="content_description_logo">Логотип "Веселый Водовоз"</string>

    <!--Route list statuses. Do NOT translate-->
    <string name="order_status_en_route">В пути</string>
    <string name="order_status_canceled">Отмена клиентом</string>
    <string name="order_status_overdue">Опоздали</string>
    <string name="order_status_completed">Завершен</string>
</resources>
