<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/taskShowAll"
        android:title="@string/menu_show_all_orders"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true" />
    <item
        android:id="@+id/taskUseGPSTime"
        android:title="@string/menu_use_gps_time"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true" />
    <item
        android:id="@+id/taskAcceptRouteListBtn"
        android:title="@string/menu_item_start_route_list"
        app:showAsAction="always" />
    <item
        android:id="@+id/taskChangeUserBtn"
        android:title="@string/menu_item_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/taskExitBtn"
        android:title="@string/menu_item_close"
        app:showAsAction="never" />
    <item
        android:id="@+id/taskShutdownBtn"
        android:title="@string/menu_item_shutdown"
        app:showAsAction="never" />

</menu>