<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/pageTitleTextView"
    android:padding="5dp">

    <TextView
        android:id="@+id/orderNumber"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/placeholder_id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/orderClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/orderNumber"
        android:layout_alignTop="@+id/orderNumber"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/orderNumber"
        android:layout_toRightOf="@+id/orderNumber"
        android:gravity="center_vertical"
        android:text="@string/placeholder_client_name"
        android:textColor="#000000"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/orderAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderNumber"
        android:layout_centerVertical="true"
        android:text="@string/placeholder_client_address"
        android:textColor="#000000"
        android:textSize="16sp" />



        <TextView
            android:id="@+id/orderStatus"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/placeholder_order_status"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/orderAddress"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/orderDeliveryTime"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/placeholder_delivery_time"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/orderAddress"
            android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>