<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.qsolution.vodovoz.driver.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/content_description_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/loginInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logo"
        android:layout_marginTop="46dp"
        android:focusable="true"
        android:hint="@string/login_hint"
        android:inputType="text"
        android:maxLines="1"
        android:textColorHint="#aaaaaa" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loginInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/loginInput"
        android:layout_below="@+id/loginInput"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="#aaaaaa" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/passwordInput"
        android:layout_alignRight="@+id/passwordInput"
        android:layout_below="@+id/passwordInput"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

</RelativeLayout>
