<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.qsolution.vodovoz.driver.OrderInfoFragmentActivity">
    <TextView
        android:id="@+id/orderNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="%Order number%"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/orderClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderNumber"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="%Client Name%"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <TextView
        android:id="@+id/orderAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderClient"
        android:layout_centerVertical="true"
        android:text="%Client Address%"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/orderDeliveryTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/orderAddress"
        android:gravity="center"
        android:text="@string/delivery_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/orderDeliveryTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/orderAddress"
        android:gravity="center"
        android:text="%Delivery time%"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/orderStatusSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/orderDeliveryTime"
        android:gravity="center"/>


    <Button
        android:id="@+id/buttonGetRoute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderStatusSpinner"
        android:text="@string/get_route"
        android:enabled="false"/>
    <TextView
        android:id="@+id/orderCommentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonGetRoute"
        android:gravity="center"
        android:text="@string/order_comment_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/orderComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/orderCommentTitle"
        android:text="%Order comment%"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/deliveryPointCommentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/orderComment"
        android:gravity="center"
        android:text="@string/delivery_point_comment_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/deliveryPointComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/deliveryPointCommentTitle"
        android:text="%Delivery Point Comment%"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
